# deep-raman

./: LICENSE  README.md  environment.yml  main.py  model.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
deep_raman/: metrics.py  utils.py
tests/: test_deep_raman.py
