[tool.poetry]
name = "deep-raman"
version = "0.1.0"
description = ""
authors = ["Thunder Shiviah <thunder.shiviah+deep.raman@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
tensorflow = "^2.7"
scikit-learn = "^1.0.2"
scikit-image = "^0.18.3"
plotly = "^5.5"
streamlit = "^1.5"
black = "^22.1.0"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
